Fix captioned image which was displaying too wide
Fix captioned image which was displaying too wide
This is a corection to a regression added in b7314a6 where we reduced
the number of rules defined for responsive image behavior.

Fixes #47

--- a/css/sass/supporting/wordpress-responsive.scss
+++ b/css/sass/supporting/wordpress-responsive.scss
@@ -4,7 +4,8 @@ img {
     max-width: 100%;
 }
 
-/* Make sure videos and embeds fit their containers. */
+/* Make sure videos, embeds, and captions fit their containers. */
+.wp-caption,
 embed,
 iframe,
 object,
